project-visualforce/BasePackage/main/default/objects/Battle__c/Battle__c.object-meta.xml
<CustomObject>
    <description>Battle object for Pokemon App.</description>
    <label>Battle</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Battle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Battles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>