project-visualforce/BasePackage/main/default/objects/Battle__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Guest for current battle</description>
    <inlineHelpText>Select a guest trainer.</inlineHelpText>
    <label>Guest</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Battles (Guest)</relationshipLabel>
    <relationshipName>GuestBattles</relationshipName>
    <type>Lookup</type>
</CustomField>