project-visualforce/BasePackage/main/default/objects/Battle__c/fields/Guest_Type__c.field-meta.xml
<CustomField>
    <fullName>Guest_Type__c</fullName>
    <defaultValue>&quot;CPU&quot;</defaultValue>
    <description>Determines whether the guest trainer is human- or AI-controlled</description>
    <inlineHelpText>Choose whether the guest trainer is human- or AI-controlled.</inlineHelpText>
    <label>Guest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrainerType</valueSetName>
    </valueSet>
</CustomField>