project-visualforce/BasePackage/main/default/objects/Battle__c/fields/GuestTeam__c.field-meta.xml
<CustomField>
    <fullName>GuestTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Guest team for current battle</description>
    <inlineHelpText>Select a team for the guest trainer.</inlineHelpText>
    <label>Guest Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Team__c.Trainer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Guest__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Battles (Guest)</relationshipLabel>
    <relationshipName>GuestBattles</relationshipName>
    <type>Lookup</type>
</CustomField>