project-visualforce/BasePackage/main/default/objects/Battle__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Host for current battle</description>
    <inlineHelpText>Select a hosting trainer.</inlineHelpText>
    <label>Host</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Battles (Host)</relationshipLabel>
    <relationshipName>HostBattles</relationshipName>
    <type>Lookup</type>
</CustomField>