project-visualforce/BasePackage/main/default/objects/Battle__c/fields/HostTeam__c.field-meta.xml
<CustomField>
    <fullName>HostTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Host team for current battle</description>
    <inlineHelpText>Select a team for the host.</inlineHelpText>
    <label>Host Team</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Team__c.Trainer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Host__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Battles (Host)</relationshipLabel>
    <relationshipName>HostBattles</relationshipName>
    <type>Lookup</type>
</CustomField>