project-visualforce/BasePackage/main/default/objects/Battle__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Winning trainer for current battle</description>
    <inlineHelpText>Select a winner.</inlineHelpText>
    <label>Winner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Victories</relationshipLabel>
    <relationshipName>Victories</relationshipName>
    <type>Lookup</type>
</CustomField>